--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "\"End-to-End Regression Testing\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "test": "protractor ./e2ejs/protractor.conf.js"
   },
   "repository": {
     "type": "git",
